# MultiPivotQuicksort

./: CMakeLists.txt  README.md
examples/: ex1.sh
exp-scripts/: optksampleexp.txt
ruby-scripts/: Makefile  gen_code_itu.sh  gen_experiments-fastest.sh  gen_experiments-five-pivot-sampling.sh  gen_experiments-four-pivot-sampling.sh  gen_experiments-nine-pivot-sampling.sh  gen_experiments-one-pivot-sampling.sh  gen_experiments-seven-pivot-sampling.sh  gen_experiments-six-pivot-sampling.sh  gen_experiments-three-pivot-sampling.sh  gen_experiments-two-pivot-sampling.sh  gen_experiments1.sh  gen_experiments2.sh  gen_experiments3.sh  gen_k_pivot_algorithm.rb  gen_rotations.rb  gen_sorting_networks.rb
src/: CMakeLists.txt  qstest.cc
src/algorithms/: included_algorithms.h  included_algorithms.h.bak  ips4o.h  networks.h  pivot_strategies.h  qs-1 0 0.h  qs-15 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0.h  qs-2 0 0 0.h  qs-3 0 0 0 0.h  qs-4 0 0 0 0 0.h  qs-5 0 0 0 0 0 0.h  qs-6 0 0 0 0 0 0 0.h  qs-7 0 0 0 0 0 0 0 0.h  qs-8 0 0 0 0 0 0 0 0 0.h  qs-9 0 0 0 0 0 0 0 0 0 0.h  qsort-copy-store-classification.h  qsort-permute-store-classification.h  qsort-permute.h  qsort1.h  qsort1block.h  qsort1block_optimized.h  qsort1hoareblock.h  qsort1hoareblock_optimized.h  qsort1is.h  qsort1lomuto.h  qsort2-count.h  qsort2-larger.h  qsort2-sample.h  qsort2-yaro.h  qsort2block.h  qsort2branchfree.h  qsort2v1.h  qsort2v2.h  qsort2v3.h  qsort2v4.h  qsort2v5.h  qsort2v6.h  qsort3.h  qsort3opt.h  qsort3sample.h  (+6 more)
src/tools/: contest.h  debug.h  input.h  lcgrandom.h  logfloor.h  papi.h  timer.h
